--- a/dashboard.html
+++ b/dashboard.html
@@ -49,7 +49,7 @@
 
 <!-- data-bs-theme ['auto', 'dark', 'light'] -->
 
-<body data-url="https://api.ulems.my.id/">
+<body data-url="http://wedding112.rf.gd/">
 
     <!-- Nav bottom -->
     <nav class="navbar navbar-expand fixed-bottom rounded-top-4 border-top d-md-none d-lg-none d-xl-none p-0">
