--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
 <!-- data-bs-theme ['auto', 'dark', 'light'] -->
 <!-- Recommend use 'data-src' in img tag -->
 
-<body data-key="bfb9cfea33ab7ae21a315fbd6f065a815d3e20ff2f007aa2ca" data-url="https://api.ulems.my.id/">
+<body data-key="009e073bea68db5f80fc785585e47ccb2521c065fffe634881" data-url="http://wedding112.rf.gd/">
 
     <!-- Root Invitation -->
     <div class="row m-0 p-0" style="opacity: 0;" id="root">
